# harden-file-transfer-rs

./: Cargo.toml
migrations/: 20220710170000_initialize_schema_and_tables.sql  20220710170500_create_files_table.sql
openapi/: fileshare.yaml
scripts/: launch_postgres.bash
