[package]
name = "harden-file-transfer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "./src/main.rs"
name = "harden-file-transfer-rs-server"

[dependencies]
harden-file-transfer-rs = "0.1.0"
clap = "2.25"
env_logger = "0.7"
tokio = { version = "1.14", features = ["full"] }
native-tls = "0.2"
# Common
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "6.1", features = ["serdejson", "server", "tls", "tcp"] }
log = "0.4.0"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Crates included if required by the API definition
uuid = {version = "0.8", features = ["serde", "v4"]}
hyper = {version = "0.14", features = ["full"]}
serde_ignored = {version = "0.1.1" }
url = {version = "2.1" }
# Server callback-specific
lazy_static = { version = "1.4" }
percent-encoding = {version = "2.1.0" }
regex = {version = "1.3"}
hyper-openssl = { version = "0.9" }
openssl = {version = "0.10" }
tokio-openssl = "0.6"
